added ability to interpret list and quotes in the opts expansion. working on finishing the printluatable functions. missing layering options

--- a/luaHelper.sty
+++ b/luaHelper.sty
@@ -11,5 +11,9 @@
 \newcommand\siluVal[3][scaler]{%
     \SI{\directlua{printNum(#2,#1)}}{#3}%
 }
-\newcommand\printLuaTable[][opts]{
+\newcommand\printLuaTable[2][empty]{
+    \directlua{
+        local optsTable = optsToTable([[#1]])
+        printTable(#2, optsTable)
+    }
 }
